# 3D-Model

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  model.cpp  model.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp
src/shaders/: fragment_shader.glsl  vertex_shader.glsl
